name:                xlsx-bg
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/xlsx-bg#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable xlsx-bg
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , conduit-extra
                     , gogol
                     , gogol-bigquery
                     , gogol-core
                     , gogol-storage
                     , http-conduit
                     , lens
                     , resourcet
                     , text
